--- a/速递医疗 医生端/StoryBoard/MyPatient.storyboard
+++ b/速递医疗 医生端/StoryBoard/MyPatient.storyboard
@@ -352,7 +352,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NGt-m4-YwE">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="确认订单" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5k-rR-J0v">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="会诊详情" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q5k-rR-J0v">
                                         <rect key="frame" x="151" y="32" width="74" height="20"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <color key="textColor" red="0.96371272470000002" green="0.95316042430000003" blue="0.95234662219999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -372,7 +372,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wqz-p9-USJ">
-                                        <rect key="frame" x="295" y="19.5" width="80" height="44"/>
+                                        <rect key="frame" x="295" y="20" width="80" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="8Bu-He-2bV"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="IHA-41-tQC"/>
@@ -400,12 +400,12 @@
                                     <constraint firstAttribute="trailing" secondItem="Wqz-p9-USJ" secondAttribute="trailing" id="xLy-Bu-iDg"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GM9-pH-Svx" customClass="BaseTableView" customModule="速递医疗_医生端" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="100" width="375" height="586.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="GM9-pH-Svx" customClass="BaseGropTableView" customModule="速递医疗_医生端" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="74" width="375" height="612.5"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="cj7-Ld-LzF">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cj7-Ld-LzF" id="KB1-Um-Wv9">
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
@@ -439,30 +439,11 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="cRx-HP-Maw" id="JNJ-zE-GEe"/>
-                                    <outlet property="delegate" destination="cRx-HP-Maw" id="qR4-DA-fX5"/>
-                                </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yVW-rq-3SF">
-                                <rect key="frame" x="10" y="74" width="228.5" height="16"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="请务必填入您本人的真实信息。">
-                                        <attributes>
-                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <font key="NSFont" size="16" name=".PingFangSC-Regular"/>
-                                            <font key="NSOriginalFont" metaFont="system" size="16"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="yVW-rq-3SF" firstAttribute="leading" secondItem="s5N-vX-Fs1" secondAttribute="leading" constant="10" id="7Wy-AZ-eFv"/>
-                            <constraint firstItem="GM9-pH-Svx" firstAttribute="top" secondItem="yVW-rq-3SF" secondAttribute="bottom" constant="10" id="8ff-Uj-d9e"/>
-                            <constraint firstItem="yVW-rq-3SF" firstAttribute="top" secondItem="NGt-m4-YwE" secondAttribute="bottom" constant="10" id="Pzf-IG-sYX"/>
+                            <constraint firstItem="GM9-pH-Svx" firstAttribute="top" secondItem="NGt-m4-YwE" secondAttribute="bottom" constant="10" id="AoT-lO-cvc"/>
                             <constraint firstItem="NGt-m4-YwE" firstAttribute="top" secondItem="s5N-vX-Fs1" secondAttribute="top" id="Wk7-Bz-56D"/>
                             <constraint firstAttribute="trailing" secondItem="NGt-m4-YwE" secondAttribute="trailing" id="Wu7-3X-Q9c"/>
                             <constraint firstItem="GM9-pH-Svx" firstAttribute="leading" secondItem="s5N-vX-Fs1" secondAttribute="leading" id="bLn-uy-drf"/>
@@ -472,7 +453,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="GM9-pH-Svx" id="dZz-IH-WCw"/>
+                        <outlet property="tableView" destination="GM9-pH-Svx" id="c44-n8-FLG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vil-YU-81w" userLabel="First Responder" sceneMemberID="firstResponder"/>
